perbaikan tugas 2
